src/manipulator/diff/snapshots/annatto__manipulator__diff__tests__deserialize_serialize.snap
---
source: src/manipulator/diff/tests.rs
expression: "toml::to_string(&diff).unwrap()"
---
by = "namespace::alternative_key"
source_parent = "corpus/subcorpora/a"
source_key = "norm::norm"
target_parent = "corpus/subcorpora/b"
target_key = "txt::txt"
algorithm = "lcs"

[source_component]
ctype = "Ordering"
layer = "default_ns"
name = "norm"

[target_component]
ctype = "Ordering"
layer = "default_ns"
name = "txt"
