src/manipulator/diff/snapshots/annatto__manipulator__diff__tests__serialize.snap
---
source: src/manipulator/diff/tests.rs
expression: "toml::to_string(&diff).unwrap()"
---
by = "annis::doc"
source_parent = "corpus/subcorpora/a"
source_key = "norm::norm"
target_parent = "corpus/subcorpora/b"
target_key = "txt::txt"
algorithm = "lcs"
mode = "merge"
keep = ["norm::sentence"]

[source_component]
ctype = "Ordering"
layer = "default_ns"
name = "norm"

[target_component]
ctype = "Ordering"
layer = "default_ns"
name = "txt"
